--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -19,6 +19,10 @@ jobs:
         java-version: '11'
         distribution: 'adopt'
         cache: gradle
+    - name: Grant execute permission for gradlew
+      run: chmod +x gradlew
+    - name: Build with Gradle
+      run: ./gradlew build
     - name: Cache SonarCloud packages
       uses: actions/cache@v1
       with:
