--- a/greencommute_be/docker-compose.yaml
+++ b/greencommute_be/docker-compose.yaml
@@ -1,34 +1,41 @@
-version: "3"
+version: "3.1"
 services:
   frontend:
     container_name: frontend
-    image: rohitsaipandugolla/greencommutefe
+    build: ../greencommute_fe
     ports:
       - "8080:80"
-
   jobservice:
-    image: rohitsaipandugolla/jobservicebe
+    build: ./jobsService
     ports:
-      - "5002:8081"
+      - "8082:8082"
     depends_on:
       - postgresql
+      - organizationservice
     environment:
       - SPRING_DATASOURCE_URL=jdbc:postgresql://postgresql:5432/postgres
       - SPRING_DATASOURCE_USERNAME=postgres
       - SPRING_DATASOURCE_PASSWORD=password
       - SPRING_JPA_HIBERNATE_DDL_AUTO=update
+      - ORGANIZATION_URL=organizationservice:8081
+    networks:
+      - local
 
   postgresql:
+    container_name: postgresql
     image: postgres
     environment:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=password
       - POSTGRES_DB=postgres
+    networks:
+      - local
 
   organizationservice:
-    image: rohitsaipandugolla/organizationservicebe
+    container_name: organizationservice
+    build: ./organizationService
     ports:
-      - "5001:8081"
+      - "8081:8081"
     depends_on:
       - postgresql
     environment:
@@ -36,3 +43,7 @@ services:
       - SPRING_DATASOURCE_USERNAME=postgres
       - SPRING_DATASOURCE_PASSWORD=password
       - SPRING_JPA_HIBERNATE_DDL_AUTO=update
+    networks:
+      - local
+networks:
+  local:
